--- a/snapface/src/app/face-snap-list/face-snap-list.component.html
+++ b/snapface/src/app/face-snap-list/face-snap-list.component.html
@@ -1,3 +1,3 @@
 <!-- <p>face-snap-list works!</p> -->
 <app-face-snap *ngFor="let faceSnap of faceSnaps" 
-                [faceSnap]="faceSnap" ></app-face-snap>  -->
+                [faceSnap]="faceSnap" ></app-face-snap>  
