--- a/SUNUSHOP/src/styles.scss
+++ b/SUNUSHOP/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    background: black;
+    color: rgb(227, 149, 162) ;
+}
+
+.btn-all{
+        background: rgb(227, 149, 162) ;
+        color: black;
+        width: 50%;
+        margin: 1rem auto;
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+        border-radius: 1rem;
+        // border: 40px solid rgb(227, 149, 162) ;
+}
+    
+.btn-all:hover{
+        background: rgba(131, 121, 189, 0.2);
+        cursor: pointer;
+        color: white;
+}
+
+
