organisation du header, creation du footer et ajout de nvx sacs

--- a/SUNUSHOP/src/app/components/produits/produits.component.html
+++ b/SUNUSHOP/src/app/components/produits/produits.component.html
@@ -1,6 +1,289 @@
-<div class="forme-produits">
-    <div class="produits">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? 
+<div class="forme-globale">
+
+    <div class="forme-produits">
+        
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/christian_Dior1.png" alt="image produit"> 
+
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/LV1.png" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/versace1.png" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <div class="forme-produits">
+        
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-doree3.jpeg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-noir3.jpeg" alt="image produit"> 
+
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-orange1.jpg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-meuve1.jpeg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="forme-produits">
+        
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-marron.jpeg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-doree2.jpeg" alt="image produit"> 
+
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/sac-noir2.jpeg" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? -->
+            <img src="../../assets/versace1.png" alt="image produit"> 
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
+
+
+        <!-- 
+        <div class="produits">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/christian_Dior1.png" alt="image produit"> 
+            <img src="../../assets/LV1.png" alt="image produit"> 
+            <img src="../../assets/versace1.png" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit">  
+
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="produits">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/christian_Dior1.png" alt="image produit"> 
+            <img src="../../assets/LV1.png" alt="image produit"> 
+            <img src="../../assets/versace1.png" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit">  
+
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="produits">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum temporibus, fuga repellat eveniet cum sapiente cupiditate molestiae doloribus reprehenderit voluptatibus labore iusto eum, excepturi quam nobis sint mollitia porro animi! Nihil, ipsum dignissimos? 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/christian_Dior1.png" alt="image produit"> 
+            <img src="../../assets/LV1.png" alt="image produit"> 
+            <img src="../../assets/versace1.png" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit"> 
+            <img src="../../assets/RougeVersace.jpg" alt="image produit">  
+
+            
+            <div class="produit-info">
+                <p>{{Produit.name}}</p >
+                <div (click)="gestionnaire()" class="acheter">
+                    acheter
+                    <ng-container *ngIf="Produit.etatProduit">
+                        acheter
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    click)="changeProduit()"         class="acheter" -->
+
+    
