--- a/SUNUSHOP/src/app/home/home.component.html
+++ b/SUNUSHOP/src/app/home/home.component.html
@@ -1,12 +1,280 @@
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+</head>
+<header>
+    <!-- TOP HEADER -->
+    <div id="top-header">
+        <div class="container">
+            <ul class="header-links pull-left">
+                <li  id="phone"><a href="#"><i class="fa fa-phone"></i> 77 177 17 10</a></li>
+                <li id="email"><a href="#"><i class="fa fa-envelope-o" ></i> sunushop@gmail.com</a></li>
+            </ul>
+            <ul class="header-links pull-right">
+                <!-- <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li> -->
+                <li id="adresse"><a href="#"><i class="fa fa-map-marker"></i> en face foire</a></li>
+                <li id="compte"><a href="#"><i class="fa fa-user-o"></i> Mon compte</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- /TOP HEADER -->
+
+    <!-- MAIN HEADER -->
+    <div id="header">
+        <!-- container -->
+        <div class="container">
+            <!-- row -->
+            <div class="row">
+                <!-- LOGO    col-md-3-->
+                <div class="row1">
+                    <div class="header-logo">
+                        <a href="#" class="logo">
+                            <img src="../assets/logo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <!-- /LOGO -->
+
+                <!-- SEARCH BAR     col-md-6-->
+                <div class="row2">
+                    <div class="header-search">
+                        <form>
+                            <select class="input-select">
+                                <option value="0">Toutes les Categories</option>
+                                <option value="1">Categorie 01</option>
+                                <option value="1">Categorie 02</option>
+                            </select>
+                            <input class="input" placeholder="Rechercher ici">
+                            <button class="search-btn">Rechercher</button>
+                        </form>
+                    </div>
+                </div>
+                <!-- /SEARCH BAR -->
+
+                <!-- ACCOUNT      col-md-3 clearfix-->
+                <div class="row11">
+                    <div class="header-ctn">
+                        <!-- Wishlist -->
+                        <!-- <div class="wishlist">
+                            <a href="#">
+                                <i class="fa fa-heart-o" id="fa-heart-o"></i>
+                                <span>Vos Souhaits</span>
+                                <div class="qty">2</div>
+                            </a>
+                        </div> -->
+                        <!-- /Wishlist -->
+
+                        <!-- Cart -->
+                        <div class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                                <i class="fa fa-shopping-cart"></i>
+                                <span>Votre Panier</span>
+                                <div class="qty">3</div>
+                            </a>
+                            <div class="cart-dropdown">
+                                <div class="cart-list">
+                                    <div class="product-widget">
+                                        <div class="product-img">
+                                            <img src="./img/product01.png" alt="">
+                                        </div>
+                                        <div class="product-body">
+                                            <h3 class="product-name"><a href="#">nom du produit</a></h3>
+                                            <h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
+                                        </div>
+                                        <button class="delete"><i class="fa fa-close"></i></button>
+                                    </div>
+
+                                    <div class="product-widget">
+                                        <div class="product-img">
+                                            <img src="./img/product02.png" alt="">
+                                        </div>
+                                        <div class="product-body">
+                                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
+                                            <h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
+                                        </div>
+                                        <button class="delete"><i class="fa fa-close"></i></button>
+                                    </div>
+                                </div>
+                                <div class="cart-summary">
+                                    <small>3 Articles(s) selectionnes</small>
+                                    <h5>TOTAL: $2940.00</h5>
+                                </div>
+                                <div class="cart-btns">
+                                    <a href="#">Voir Panier</a>
+                                    <a href="#">Verifier  <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Cart -->
+
+                        <!-- Menu Toogle -->
+                        <div class="menu-toggle">
+                            <a href="#">
+                                <i class="fa fa-bars"></i>
+                                <span>Menu</span>
+                            </a>
+                        </div>
+                        <!-- /Menu Toogle -->
+                    </div>
+                </div>
+                <!-- /ACCOUNT -->
+            </div>
+            <!-- row -->
+        </div>
+        <!-- container -->
+    </div>
+    <!-- /MAIN HEADER -->
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+<link rel="stylesheet" href= "https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+
 <div class="forme-home">
     <div class="contenu-home">
+        <!-- <ng-container *ngFor="let vote of voteArray;let i=index">
+            <app-produits [Produit]="Produit" (achatAction)="verificationProduit($event,i)"></app-produits>
+        </ng-container> -->
+        <app-produits></app-produits>
+        
+        <!-- <app-produits></app-produits>
         <app-produits></app-produits>
         <app-produits></app-produits>
-        <app-produits></app-produits>
-        <app-produits></app-produits>
-        <app-produits></app-produits>
+        <app-produits></app-produits> -->
 
 
     </div>
 
 </div>
+
+<!-- <header>
+    <a href="#" class="logo"><span>SUNU</span>shop</a>
+    <div class="menutoggle" onclick="toggleMenu();"></div>
+    <ul class="navbar">
+        <li><a href="#" onclick="toggleMenu();"></a></li>
+        <li><a href="#" onclick="toggleMenu();"></a></li>
+        <li><a href="#" onclick="toggleMenu();"></a></li>
+         <li><a href="#" onclick="toggleMenu();">Nous contacter</a></li> 
+        <a href="#" class="btn-reserve" onclick="toggleMenu();">Panier</a>
+    </ul>
+</header> -->
+
+
+
+
+<footer id="footer">
+
+    <div class="section">
+
+        <div class="container">
+            <div class="row">
+                <div class="row1">
+                    <div class="footer">
+                        <h3 class="footer-title">A Propos de nous</h3>
+                        <p>Nous sommes une entreprise qui a l'obsession du client, nous plaçons l'intérêt du client au premier plan et travaillons en accord avec ce principe.</p> 
+                        <ul class="liens-footer">
+                            <div class="infos">   
+                                <li><a href="#"><i class="fa fa-phone"></i>77 177 17 10</a></li>
+                                <li><a href="#"><i class="fa fa-envelope-o"></i>sunushop@gmail.com</a></li>
+                            </div>
+                            <div class="medias">
+
+                                <a href="https://www.google.fr" target="_blank" ><p><i class="fab fa-google"></i></p></a>
+                        
+                                <a href="https://www.youtube.fr" target="_blank"><p><i class="fab fa-youtube"></i></p></a>
+                                
+                                <a href="https://www.facebook.fr" target="_blank"><p><i class="fab fa-facebook"></i></p></a>
+                                
+                                <a href="https://www.twitter.fr" target="_blank"><p><i class="fab fa-twitter"></i></p></a>    
+                            </div>
+
+                        
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row2">
+                    <div class="footer">
+                        <h3 class="footer-title">Categories</h3>
+                        <ul class="liens-footer">
+                            <li><a href="#">Sacs</a></li>
+                            <li><a href="#">Chaussures</a></li>
+                            <li><a href="#">Maquillage</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+    
+            <!-- <div class="clearfix visible-xs"></div> -->
+            <div class="row">
+                <div class="row1">
+                    <div class="footer">
+                        <h3 class="footer-title">Information</h3>
+                        <ul class="liens-footer">
+                            <li><a href="#">A Propos</a></li>
+                            <li><a href="#">Contactez-nous</a></li>
+                            <!-- <li><a href="#">Privacy Policy</a></li> -->
+                            <li><a href="#">Commandes et Retours</a></li>
+                            <!-- <li><a href="#">Terms & Conditions</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row2">
+                    <div class="footer">
+                        <h3 class="footer-title">Service</h3>
+                        <ul class="liens-footer">
+                            <li><a href="#">Mon Compte</a></li>
+                            <li><a href="#">Voir Panier</a></li>
+                            <li><a href="#">Suivre ma commande</a></li>
+                            <li><a href="#">Aide</a></li>
+                        </ul>
+                    </div>
+                </div>
+    
+            </div>
+        </div>
+    </div>  
+    <!-- bottom footer -->
+    <div id="bottom-footer" class="section">
+        <div class="container">
+        <!-- row -->
+            <div class="row">
+                <div class="row1">
+                    <ul class="footer-payments">
+                        <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
+                        <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
+                    </ul>
+                    
+                </div>
+            </div>
+            <!-- /row -->
+        </div>
+    <!-- /container -->
+    </div>
+    <!-- /bottom footer -->
+
+    
+    
+</footer>
+<span class="copyright">
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Ce modèle est fait <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+</span>
+
+
