--- a/SUNUSHOP/src/app/login/login.component.html
+++ b/SUNUSHOP/src/app/login/login.component.html
@@ -1,11 +1,13 @@
+
+
 <div class="container">
     <h1>Se connecter</h1>
     <div class="login-content">
 
-        <input type="text" name="username" placeholder="Nom">
-        <input type="password" name="password" placeholder="Mot De Pass">
+        <input type="text" [(ngModel)]="email" name="email" placeholder="Email">
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Mot De Pass">
 
-        <div class="btn-all">
+        <div (click)="redirecToHome()" class="btn-all">
             CONNEXION
         </div>
     </div>
