--- a/SUNUSHOP/src/app/components/produits/produits.component.scss
+++ b/SUNUSHOP/src/app/components/produits/produits.component.scss
@@ -1,12 +1,80 @@
+.forme-globale{
+    display: flex;
+    width: 100%;
+   
+
+}
+
+
 .forme-produits{
     width: 100%;
+ 
+    
 }
 
 .produits{
-    width: 100%;
+    width: 70%;
     border-radius:10px;
-    box-shadow: 2px 3px 30px 2px rgba(125, 125, 125, 0.2);
+    box-shadow: 5px 15px 15px 2px rgba(125, 125, 125, 0.7);
+    padding: 10px;
+    margin: auto;
+   
+    img{
+        width: 100%;
+        border-radius: 5px;
+    }
 }
+
+.produit-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+.produit-info p{
+    color: white;
+}
+
+.acheter{
+    background-color: #464444a6;
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    color: rgb(219, 235, 220);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 100px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.acheter:hover{
+    //  background: rgb(125, 125, 125);
+    // background: rgb(244, 234, 234);
+    background: rgb(165, 55, 73) ;
+    // transform: translateY(-5px);
+    // transition: 0.5s ease-in;
+
+}
+
+.produit:hover{
+    transform: translateY(-5px);
+    transition: 0.5s;
+}
+
+
+
+
+
+
+// .{
+//     background: #fff;
+
+// }
+
+
 
 
 
