--- a/SUNUSHOP/src/app/register/register.component.html
+++ b/SUNUSHOP/src/app/register/register.component.html
@@ -2,11 +2,13 @@
     <h1>S'inscrire</h1>
     <div class="register-content">
 
-        <input type="text" name="username" placeholder="Nom">
-        <input type="password" name="password" placeholder="Mot De Pass">
+        <input type="text" [(ngModel)]="email" name="email" placeholder="Email">
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Mot De Pass">
 
-        <div class="btn-all">
+        <div (click)="redirecToHome()" class="btn-all">
             INSCRIPTION
         </div>
     </div>
 </div>
+
+
