--- a/SUNUSHOP/src/app/register/register.component.scss
+++ b/SUNUSHOP/src/app/register/register.component.scss
@@ -27,6 +27,33 @@ input{
     border: 0.3px solid rgb(75, 63, 65);
 }
 
+.btn-all{
+    background: rgb(227, 149, 162) ;
+    color: black;
+    // width: 50%;
+    margin: 1rem auto;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-bottom: 350px;
+    border-radius: 10px;
+    width: 40%;
+    font-size: 20px;
+    // border: 40px solid rgb(227, 149, 162) ;
+}
+
+.btn-all:hover{
+    background: rgba(131, 121, 189, 0.2);
+    cursor: pointer;
+    color: white;
+
+}
+
+
+
+
+
+
 // .btn-all{
 //     background: rgba(64, 50, 194, 0.966);
 //     color: white;
@@ -38,10 +65,7 @@ input{
 //     border-radius: 1rem;
 // }
 
-// .btn-all:hover{
-//     background: rgba(131, 121, 189, 0.2);
-//     cursor: pointer;
-// }
+
 
 
 
