--- a/SUNUSHOP/src/app/login/login.component.html
+++ b/SUNUSHOP/src/app/login/login.component.html
@@ -1,3 +1,19 @@
+<div class="forme-nav">
+
+    <div class="contenu-nav">
+
+        <!-- <div (click)="redirecTo('login')" class="btn-all"> -->
+        <div class="btn-all">
+            Connexion
+        </div>
+        <div (click)="redirecTo('register')" class="btn-all">
+            Inscription
+        </div>
+
+
+    </div>
+</div>
+
 
 
 <div class="container">
