--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -6,4 +6,5 @@
  -->
 
 <app-header></app-header>
- <app-face-snap-list></app-face-snap-list>
+ <!-- <app-face-snap-list></app-facesnap-list> -->
+<router-outlet></router-outlet>
