--- a/SUNUSHOP/src/app/components/nav-bar/nav-bar.component.scss
+++ b/SUNUSHOP/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,12 +1,12 @@
-.forme-nav{
-    width: 100%;
-    display: flex;
-}
-.contenu-nav{
-    width: 100%;
-    display: flex;
+// .forme-nav{
+//     width: 100%;
+//     display: flex;
+// }
+// .contenu-nav{
+//     width: 100%;
+//     display: flex;
    
-}
+// }
 
 // .btn-all{
 //     border-radius: 10px;
