--- a/SUNUSHOP/src/app/home/home.component.scss
+++ b/SUNUSHOP/src/app/home/home.component.scss
@@ -1,6 +1,10 @@
 
 
 
+
+
+
+
 h1, h2, h3, h4, h5, h6 {
   color: #2B2D42;
   font-weight: 700;
@@ -34,7 +38,7 @@ ul, ol {
 
 
 
-.input {
+#input {
   height: 40px;
   padding: 0px 15px;
   border: 1px solid #E4E7ED;
@@ -45,6 +49,7 @@ ul, ol {
 .forme-home{
     width: 100%;
     display: flex;
+    background-color: whitesmoke;
     
 }
 
@@ -59,52 +64,88 @@ ul, ol {
 
 
 #top-header {
-    padding-top: 10px;
+    padding-top: 15px;
     padding-bottom: 10px;
-    background-color: #1E1F29;
+    background-color: rgb(10, 8, 8);
+
+    // position: fixed;   /* pour que ca bouge tout le long de la page */
+    // top: 0%;
+    // left: 0%;
+    // padding: 20px 50px;
+    // width: 100%;
+    // z-index: 1;
+    // display: flex; /* pour que l'en tete soit sous forme de ligne */ 
+    // justify-content: space-evenly; /* distance entre le logo et les ul */
+    // align-items: center; /* le logo soit au centre par rapport aux ul */
+    // transform: 0.5s;
+    // max-width: 100%;
     
   }
-  .container ul{
+  #container ul{
     padding-bottom: 5px;
-    margin: 0 20px 0 -40px;
+    // margin: 0 20px 0 -40px;
+    margin: -20px;
+    // margin-left: ;
   }
-  #phone {
-    margin-left: -150px;
-  }
-  #email {
-    margin-left: -130px;
-  }
+  #container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 960px;
+    margin: 0px auto;
+    margin-right: -40px;
 
-  #compte {
-    margin-left: -125px;
   }
-  #adresse {
-    margin-left: 470px;
-    width: 100px;
+  // #phone {
+  //   margin-left: -150px;
+  // }
+  // #email {
+  //   margin-left: -130px;
+  // }
+  // #money {
+  //   margin-top: -20px;
+  // }
+
+  // #compte {
+  //   margin-left: -125px;
+  // }
+  // #adresse {
+  //   margin-left: 70px;
+   
+    
+  // }
+
+  .header-links  {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-left: 300px;
     
   }
-
-
   .header-links li {
-    display: inline-block;
-    margin-right: 165px;
-    font-size: 12px;
-    
+    // display: inline-block;
+    // margin-right: 165px;
+    // font-size: 12px;
+    margin-left: 30px;
+  }
+  .header-links li:first-child {
+    margin-left: -140px;
   }
   .header-links li #phone{
-   
+
     
   }
   
   .header-links li:last-child {
-    margin-right: 0px;
+    margin-right: 240px;
     
   }
   
   .header-links li a {
     color: #FFF;
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1em;
   }
   
   .header-links li a:hover {
@@ -123,7 +164,7 @@ ul, ol {
   #header {
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: #15161D;
+    background-color: rgb(15, 8, 31)
   }
   
   .header-logo {
@@ -133,7 +174,7 @@ ul, ol {
   
   .header-logo .logo img {
     display: block;
-    margin-left: -200px;
+    margin-left: -160px;
     width: 140px;
     height: 70px;
     border-radius: 20px;
@@ -144,27 +185,26 @@ ul, ol {
   \*----------------------------*/
   
   .header-search {
-    padding: 5px 30px;
+    padding: 5px 45px;
     display: flex;
-    
   }
   
   .header-search form {
     position: absolute;
-    padding: 5px 0px;
+    padding: 5px 0;
     display: flex;
     margin-left: 40px;
     text-align: center;
   }
   
   .header-search form .input-select {
-    margin-right: -4px;
+    margin-right: -1px;
     border-radius: 40px 0px 0px 40px;
   }
   
-  .header-search form .input {
+  .header-search form #input {
     width: calc(100% - 260px);
-    margin-right: -4px;
+    margin-right: -10px;
     height: 42px;
 
   }
@@ -186,7 +226,7 @@ ul, ol {
   .header-ctn {
     float: right;
     padding: 15px 0px;
-    margin-left: 610px;
+    margin-left: 570px;
     display: flex;
   }
   
@@ -247,6 +287,9 @@ ul, ol {
   .dropdown{
     margin-left: -20px;
   }
+  .dropdown a{
+    text-decoration: none;
+  }
 
   .cart-dropdown {
     position: absolute;
@@ -260,6 +303,21 @@ ul, ol {
     opacity: 0;
     visibility: hidden;
     cursor: pointer;
+  }
+  .dropdown:hover {
+    // position: absolute;
+    // width: 300px;
+    // background: #FFF;
+    color: rgb(165, 55, 73) ;
+    // padding: 15px;
+    // -webkit-box-shadow: 0px 0px 0px 2px #E4E7ED;
+    // box-shadow: 0px 0px 0px 2px #E4E7ED;
+    // // z-index: 99;
+    // right: 0;
+    // opacity: 0;
+    // visibility: hidden;
+    cursor: pointer;
+    transition: 0.2s;
   }
   
   .dropdown.open>.cart-dropdown {
@@ -445,7 +503,7 @@ ul, ol {
   
   .liens-footer li  {
     margin-top: 19px;
-    margin-left: 50px;
+    margin-left: 17px;
     
 
   }
@@ -454,13 +512,22 @@ ul, ol {
     color: #B9BABC;
     margin-top: 40px;
     text-decoration: none;
-    margin-left: 5px;
+    margin-left: -5px;
   }
   
+  // .liens-footer li i {
+  //   margin-right: 65px;
+  //   color: rgb(165, 55, 73) ;
+  //   width: 14px;
+  //   text-align: center;
+  //   margin-top: 40px;
+    
+  // }
   .liens-footer li i {
-    margin-right: 15px;
+    margin-right:-5px;
+    margin-left: -10px;
     color: rgb(165, 55, 73) ;
-    width: 14px;
+    width: 40px;
     text-align: center;
     margin-top: 40px;
     
@@ -509,7 +576,7 @@ ul, ol {
   .medias{
       display: flex;
       margin-top: -1px;
-     margin-left: 15px;
+     margin-left: -25px;
       justify-content: center;
       flex-wrap: wrap;
      padding: 10px 0 10px;
@@ -585,6 +652,7 @@ ul, ol {
     }
   }
   
+
 
 
 
