--- a/SUNUSHOP/src/app/register/register.component.html
+++ b/SUNUSHOP/src/app/register/register.component.html
@@ -1,3 +1,19 @@
+<div class="forme-nav">
+
+    <div class="contenu-nav">
+
+        <div (click)="redirecTo('login')" class="btn-all">
+            Connexion
+        </div>
+        <div class="btn-all">
+            Inscription
+        </div>
+
+
+    </div>
+</div>
+
+
 <div class="container">
     <h1>S'inscrire</h1>
     <div class="register-content">
