--- a/SUNUSHOP/src/app/register/register.component.scss
+++ b/SUNUSHOP/src/app/register/register.component.scss
@@ -1,3 +1,14 @@
+.forme-nav{
+    width: 100%;
+    display: flex;
+}
+.contenu-nav{
+    width: 100%;
+    display: flex;
+   
+}
+
+
 .container{
     width: 100%;
     height: 100vh;
@@ -5,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: -50px;
 }
 
 .register-content{
@@ -15,10 +27,10 @@
 }
 
 input{
-    width: 60%;
+    width: 50%;
     margin: 5px auto;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
     outline: none;
     border: none;
     background: black;
@@ -31,13 +43,13 @@ input{
     background: rgb(227, 149, 162) ;
     color: black;
     // width: 50%;
-    margin: 1rem auto;
+    margin: 2rem auto;
     display: flex;
     justify-content: center;
-    padding: 10px;
+    padding: 6px;
     border-bottom: 350px;
     border-radius: 10px;
-    width: 40%;
+    width: 30%;
     font-size: 20px;
     // border: 40px solid rgb(227, 149, 162) ;
 }
