--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,16 +1,19 @@
 <!-- <p>face-snap works!</p> -->
-<div class="face-snap-card">
-    <p>{{ 334.36 | currency: 'EUR' : 'code' }}</p>
+<div class="face-snap-card" [ngClass]="{snapped: buttonText === 'Oops, unSnap!'}">
+    <!-- <p>{{ 334.36 | currency: 'EUR' : 'code' }}</p> -->
     <h2>{{ faceSnap.title | uppercase}}</h2>
-    <p>Mis en ligne le {{ faceSnap.createdDate | date: 'à HH:mm, le d MMMM yyyy'}}</p>
+    <p>{{ faceSnap.description }}</p> 
+    <button (click)="onViewFaceSnap()">VIEW</button>
+     
+    <!-- <p>Mis en ligne le {{ faceSnap.createdDate | date: 'à HH:mm, le d MMMM yyyy'}}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
-    <p>{{ faceSnap.description }}</p>
-     <p *ngIf="faceSnap.location" >Photo prise a {{ faceSnap.location }}</p> 
+    -->
+    <!-- <p *ngIf="faceSnap.location" >Photo prise a {{ faceSnap.location }}</p> 
     <p>
         <button (click)="onSnap()">{{ buttonText }}</button>
         <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps +', 0)'}">{{ faceSnap.snaps }}</span>
     </p>
-    <p></p>
+    <p></p> -->
 
 <!--=== 'Paris'-->
 <!-- 'dd/MM/yy, à HH:mm' -->
