--- a/snapface/src/styles.scss
+++ b/snapface/src/styles.scss
@@ -8,4 +8,22 @@ body{
   padding: 0;
 }
 
+button{
+  background-color: transparent;
+  box-sizing: border-box;
+  padding: 5px 10px;
+  border: none;
+  box-shadow: lightgray 4px 4px 20px;
+  margin-right: 20px;
+  outline: none;
+  font-size: 14px;
+  font-weight: 500;
+  &:active{
+      transform: translate(1px, 1px);
+      box-shadow: lightgray 0 0 5px;
+  }
+}
+
+
+
 
