ajout panier contact et commencement a propos

--- a/SUNUSHOP/src/app/home/home.component.html
+++ b/SUNUSHOP/src/app/home/home.component.html
@@ -57,7 +57,7 @@
                 <!-- LOGO    col-md-3-->
                 <div class="col-md-3">
                     <div class="header-logo">
-                        <a href="#" class="logo">
+                        <a href="home" class="logo">
                             <img src="../assets/logo.png" alt="">
                         </a>
                     </div>
@@ -84,7 +84,7 @@
                             tabindex="0"
                             aria-label="Rechercher Sunushop.fr"
                             spellcheck="false">
-                            <button class="search-btn">Rechercher</button>
+                            <button class="search-btn"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
                 </div>
@@ -163,6 +163,24 @@
         <!-- container -->
     </div>
     <!-- /MAIN HEADER -->
+
+    <div class="top-bar">
+        <!-- <p><i class="fas fa-envelope"></i> sunushop@gmail.com</p> -->
+        <div class="navbar">
+            
+            <!-- <div class="cart">
+                <i class="fa fa-shopping-cart"></i><p id="count">0</p> -->
+            <!-- </div> -->
+            <ul>
+                <li><a href="home"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="apropos"><i class="fas fa-question-circle"></i>A propos..</a></li>
+                <li><a href="contact"><i class="fas fa-address-book"></i>Contact</a></li>
+                <li><a href="register"><i class="fas fa-user-circle"></i>S'inscrire</a></li>
+            </ul>
+        </div>
+        <!-- <p><i class="fas fa-phone"></i>77 177 10 00</p> -->
+    </div>
+
 </header>
 
 
