--- a/SUNUSHOP/src/app/home/home.component.scss
+++ b/SUNUSHOP/src/app/home/home.component.scss
@@ -1,11 +1,21 @@
 
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+  // height: 300px;
+  // background-color: whitesmoke;
+  
+  font-size: 16px;
+  // color: black;
+}
 
 
 
 
-
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3,   h4, h5, h6 {
   color: #2B2D42;
   font-weight: 700;
   margin: 0 0 10px;
@@ -18,7 +28,8 @@ a {
   transition: 0.2s color;
 }
 
-a:hover, a:focus {
+// a:hover, a:focus {
+  a:hover {
   color: rgb(165, 55, 73) ;
   text-decoration: none;
   outline: none;
@@ -64,9 +75,10 @@ ul, ol {
 
 
 #top-header {
-    padding-top: 15px;
+  margin-top: -10px;
+    padding-top: 20px;
     padding-bottom: 10px;
-    background-color: rgb(10, 8, 8);
+    background-color: black;
 
     // position: fixed;   /* pour que ca bouge tout le long de la page */
     // top: 0%;
@@ -85,6 +97,11 @@ ul, ol {
     padding-bottom: 5px;
     // margin: 0 20px 0 -40px;
     margin: -20px;
+    
+    // margin-left: ;
+  }
+  #container ul li a{ 
+    color: #ebecf0;
     // margin-left: ;
   }
   #container{
@@ -149,12 +166,13 @@ ul, ol {
   }
   
   .header-links li a:hover {
-    color: rgb(165, 55, 73) ;
+    color: rgb(165, 55, 73);
   }
   
   .header-links li i {
-    color: rgb(165, 55, 73) ;
+    color: rgb(165, 55, 73);
     margin-right: 5px;
+    font-size: 1.2em;
   }
   
   /*----------------------------*\
@@ -164,7 +182,7 @@ ul, ol {
   #header {
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: rgb(15, 8, 31)
+    background-color: rgb(23, 7, 43);
   }
   
   .header-logo {
@@ -382,6 +400,82 @@ ul, ol {
     padding-top: 15px;
     padding-bottom: 15px;
   }
+
+
+  .top-bar{
+    width: 100%;
+    height: 3rem;
+    // background-color: #8e8686;
+    background-color: whitesmoke;
+    // margin-bottom: 1px ;
+    margin: 0;
+    border: 2px solid rgb(156, 10, 10) ;
+    border-radius: 5px;
+    display: flex;
+    padding: 0 0px;
+    margin-top: 0px;
+    align-items: center;
+    justify-content: space-between;
+}
+.top-bar p{
+  color: rgb(20, 19, 19);
+  font-size: 20px;
+}
+
+.top-bar p:hover{
+   color: rgb(135, 53, 65) ;
+   font-size: 20px;
+}
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  // padding: 10px;
+}
+.navbar p{
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(13, 13, 13);
+}
+.navbar ul{
+  display: flex;
+  list-style: none;
+  margin-left: 110px;
+  // height: 100%;
+}
+.navbar ul li a{
+  text-decoration: none;
+  font-size: 20px;
+  color: rgb(20, 20, 20);
+  padding: 10px 20px;
+  margin: 0 60px;
+  height: 100%;
+}
+.navbar ul li i{
+  color: rgb(165, 55, 73);
+  font-size: 1.2em;
+}
+.navbar ul li i:hover{
+  color: rgb(255, 250, 250);
+
+}
+.navbar ul li a:hover{
+  background-color: rgb(165, 55, 73);
+  color:whitesmoke;
+  border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
   
   /*=========================================================
       03 -> Navigation
@@ -601,6 +695,11 @@ ul, ol {
     }
     .section-tab-nav li {
       margin-top: 10px;
+    }
+    body{
+      max-width: 168px;
+    // margin: auto;
+      width: 100%;
     }
   }
   @media (max-width: 767px) {
