--- a/SUNUSHOP/src/styles.scss
+++ b/SUNUSHOP/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{
-    background: black;
-    color: rgb(227, 149, 162) ;
-}
+// body{
+//     background: black;
+//     color: rgb(227, 149, 162) ;
+// }
 
